<resources>
    <string name="app_name">DeepTraders</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="version">V1.0.0</string>
    <string name="text_french" translatable="false">French</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_bangla" translatable="false">বাংলা</string>
    <string name="text_spanish" translatable="false">Spanish</string>
    <string name="text_hindi" translatable="false">हिन्दी</string>
    <string name="price_rupee">₹ %s</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_ads_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_ads_id" translatable="false">"ca-app-pub-3940256099942544/1033173712"</string>
    <string name="action_settings">Settings</string>
    <string name="products">Products</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="pos">POS</string>
    <string name="expense">Expense</string>
    <string name="report">Report</string>
    <string name="all_orders">All Orders</string>
    <string name="all_sales">All Sales</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_cell">Customer Phone Number</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_address">Customer Address</string>
    <string name="add_customer">Add Customer</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_cell">Enter Customer Cell</string>
    <string name="enter_customer_address">Enter Customer Address</string>
    <string name="customer_successfully_added">Customer Successfully Added</string>
    <string name="all_customer">All Customer</string>
    <string name="no_customer_found">No Customer Found!</string>
    <string name="all_suppliers">All Suppliers</string>
    <string name="no_suppliers_found">No Suppliers Found!</string>
    <string name="add_suppliers">Add Suppliers</string>
    <string name="enter_suppliers_name">Enter Suppliers Name</string>
    <string name="enter_suppliers_contact_person_name">Enter Suppliers Contact Person Name</string>
    <string name="enter_suppliers_cell">Enter Suppliers Cell</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_suppliers_address">Enter Suppliers Address</string>
    <string name="suppliers_successfully_added">Suppliers Successfully Added</string>
    <string name="failed">Failed</string>
    <string name="product_name_cannot_be_empty">Product name can\'t be empty!</string>
    <string name="product_category_cannot_be_empty">Product category can\'t be empty!</string>
    <string name="product_sell_price_cannot_be_empty">Product sell price can\'t be empty!</string>
    <string name="product_stock_cannot_be_empty">Product stock can\'t be empty!</string>
    <string name="product_supplier_cannot_be_empty">Product supplier can\'t be empty!</string>
    <string name="product_weight_cannot_be_empty">Product weight can\'t be empty!</string>
    <string name="product_successfully_added">Product Successfully Added</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_product">Add Product</string>
    <string name="product_details">Product Details</string>
    <string name="product_code">Product Code</string>
    <string name="product_description">Product Description</string>
    <string name="unit_product_sell_price">Unit Product Sell Price</string>
    <string name="product_sell_price">Product Sell Price</string>
    <string name="product_stock">Product Stock</string>
    <string name="product_weight">Product Weight</string>
    <string name="select_product_weight_unit">Select Product Weight Unit</string>
    <string name="product_weight_unit">Product Weight Unit</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="choose_product_image">Choose Product Image</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_import">Database Import</string>
    <string name="year_2020">Year 2020</string>
    <string name="total_sales">Total Sales : </string>
    <string name="search_here">Search Here. . . .</string>
    <string name="no_order_found">No Order Found</string>
    <string name="no_product_found">No Product Found</string>
    <string name="submit_order">Submit Order</string>
    <string name="all_sales_report">All Sales Report</string>
    <string name="all_expense_report">All Expense Report</string>
    <string name="monthly_sales_graph">Monthly Sales Graph</string>
    <string name="monthly_expense_graph">Monthly Expense Graph</string>
    <string name="no_data_found">No Data Found</string>
    <string name="shop_information">Shop Information</string>
    <string name="data_backup">Data Backup</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_contact_number">Shop Contact Number</string>
    <string name="shop_email">Shop Email</string>
    <string name="shop_address">Shop Address</string>
    <string name="currency_symbol">₹</string>
    <string name="shop_currency">Shop Currency</string>
    <string name="edit">Edit</string>
    <string name="update_information">Update Information</string>
    <string name="product_category">Product Category</string>
    <string name="cancel">Cancel</string>
    <string name="payment">PAYMENT</string>
    <string name="submit">SUBMIT</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_name">Product Name</string>
    <string name="weight">Weight:</string>
    <string name="price">Price</string>
    <string name="unit_product_buy_price"> Unit Product Buy  Price </string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_contact_person">Supplier Contact Number</string>
    <string name="supplier_cell">Supplier Cell</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="monthly_expense_in_graph">Monthly Expense in Graph</string>
    <string name="year">Year</string>
    <string name="monthly_expense_report">Monthly Expense Report</string>
    <string name="total_expense">Total Expense: </string>
    <string name="monthly_sales_report">Monthly Sales Report</string>
    <string name="all_expense">All Expense</string>
    <string name="shop_name_cannot_be_empty">Shop name can\'t be empty</string>
    <string name="shop_contact_cannot_be_empty">Shop contact can\'t be empty</string>
    <string name="shop_address_cannot_be_empty">Shop address can\'t be empty</string>
    <string name="shop_currency_cannot_be_empty">Shop currency can\'t be empty</string>
    <string name="shop_information_updated_successfully">Shop Information Updated Successfully</string>
    <string name="enter_local_database_backup_name">Enter Local Database Backup Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unable_to_create_directory_retry">Unable to create directory. Retry</string>
    <string name="database_restore">Database Restore:</string>
    <string name="unable_to_restore_retry">Unable to restore. Retry</string>
    <string name="backup_folder_not_present">Backup folder not present</string>
    <string name="all_product">All Product</string>
    <string name="product_cart">Product Cart</string>
    <string name="no_product_in_cart">No Product in Cart</string>
    <string name="order_done_successful">Order Done Successful</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="select_order_type">SELECT ORDER TYPE</string>
    <string name="select_customer">SELECT CUSTOMER</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Order Details</string>
    <string name="total_price">Total Price : </string>
    <string name="add_expense">Add Expense</string>
    <string name="hi_welcome">Hello! Welcome</string>
    <string name="product_removed_from_cart">Product removed from cart</string>
    <string name="backup_completed_successfully">Backup Completed Successfully</string>
    <string name="unable_to_backup_database_retry">Unable to backup database. Retry</string>
    <string name="database_Import_completed">Database Import Completed</string>
    <string name="unable_to_import_database_retry">Unable to import database. Retry</string>
    <string name="want_to_delete_customer">Want to Delete Customer ?</string>
    <string name="customer_deleted">Customer Deleted</string>
    <string name="note">Note: </string>
    <string name="want_to_delete_expense">Want to Delete Expense ?</string>
    <string name="expense_deleted">Expense Deleted</string>
    <string name="order_id">Order ID: </string>
    <string name="payment_method">Payment Method: </string>
    <string name="order_type">Order Type: </string>
    <string name="want_to_delete_supplier">Want to Delete Supplier ?</string>
    <string name="supplier_deleted">Supplier Deleted</string>
    <string name="quantity">Quantity:</string>
    <string name="date">Date:</string>
    <string name="supplier">Supplier: </string>
    <string name="buy_price">Buy Price:</string>
    <string name="sell_price">Sell Price:</string>
    <string name="want_to_delete_product">Want to Delete Product ?</string>
    <string name="product_deleted">Product Deleted</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="product_already_added_to_cart">Product Already Added to Cart</string>
    <string name="product_added_to_cart_failed_try_again">Product added to cart failed! Try again</string>
    <string name="press_once_again_to_exit">Press once again to exit!</string>
    <string name="type_something_to_search">Type something to search</string>
    <string name="expense_name_cannot_be_empty">Expense name can\'t be empty</string>
    <string name="expense_amount_cannot_be_empty">Expense amount can\'t be empty</string>
    <string name="expense_successfully_added">Expense Successfully Added</string>
    <string name="qr_barcode_scanner">QR or Barcode Scanner</string>
    <string name="camera_permission">Camera Permission Required</string>
    <string name="export_data_to_excel">Export Data to Excel</string>
    <string name="import_from_excel">Import From Excel</string>
    <string name="data">Data</string>
    <string name="export_all_data_to_excel">Export All Data to Excel</string>
    <string name="data_export_fail">Data Export Fail</string>
    <string name="data_successfully_exported">Data Successfully Exported</string>
    <string name="data_exporting_please_wait">Data Exporting. Please wait. . .</string>
    <string name="no_file_found">No File Found</string>
    <string name="data_importing_please_wait">Data importing. Please wait. . .</string>
    <string name="data_successfully_imported">Data Successfully Imported</string>
    <string name="data_import_fail">Data Import Fail</string>
    <string name="error">Error</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="open_pdf">Open PDF</string>
    <string name="tax_in_percentage">Tax in percentage (%)</string>
    <string name="total_tax">Total Tax : </string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="net_sales">Net Sales : </string>
</resources>