<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:orientation="vertical"
    tools:context=".setting.shop.ShopInformationActivity">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_gradient"
        android:elevation="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:contentDescription="Back"
            android:src="@drawable/back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sailec_regular"
            android:paddingStart="12dp"
            android:text="@string/shop_information"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bell_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Notifications" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_name" />

            <EditText
                android:id="@+id/etxt_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_contact_number" />

            <EditText
                android:id="@+id/etxt_shop_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_border"

                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_contact_number"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_email" />

            <EditText
                android:id="@+id/etxt_shop_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_email"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_address" />

            <EditText
                android:id="@+id/etxt_shop_address"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:gravity="start"
                android:hint="@string/shop_address"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/currency_symbol" />

            <EditText
                android:id="@+id/etxt_shop_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:focusable="false"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_currency"
                android:inputType="none"
                android:maxLength="4"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/tax_in_percentage" />

            <EditText
                android:id="@+id/etxt_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/tax"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_shop_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="400dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/sailec_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/edit"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="400dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/sailec_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/update_information"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>