<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/image_placeholder" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/product_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/sailec_regular" />

                    <TextView
                        android:id="@+id/txt_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/weight"
                        app:fontFamily="@font/sailec_regular" />

                    <TextView
                        android:id="@+id/txt_stock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/product_stock"
                        app:fontFamily="@font/sailec_regular" />

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/price"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        app:fontFamily="@font/sailec_regular" />

                        <Button
                            android:id="@+id/btn_add_cart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/sailec_regular"
                            android:text="@string/add_to_cart"
                            android:textColor="#fff"
                            android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>