<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/graphReport"
    tools:context=".report.GraphReportActivity">

    <!-- Toolbar -->
    <LinearLayout
        android:elevation="12dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:paddingHorizontal="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/actionbar_gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:visibility="visible"
            android:id="@+id/menu_icon"
            android:layout_width="30dp"
            android:src="@drawable/back"
            android:layout_height="25dp"
            android:contentDescription="Menu" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monthly_sales_graph"
            android:textStyle="bold"
            android:fontFamily="@font/sailec_regular"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:paddingStart="12dp" />

        <ImageView
            android:id="@+id/bell_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Notifications" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_select_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableRight="@drawable/ic_arrow_down"
            android:fontFamily="@font/sailec_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/year_2020"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart"
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </com.github.mikephil.charting.charts.BarChart>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_total_sales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/total_sales"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_total_tax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/total_tax"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/discount"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_net_sales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/net_sales"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>